src/TemplateParser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from TemplateParser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseSLRFile -> File                        (0)
	File -> StatementList                              (1)
	StatementList -> Statement                         (2)
	StatementList -> StatementList Statement           (3)
	Statement -> MODULEDIR IDENTIFIER                  (4)
	Statement -> IMPORTDIR IDENTIFIER                  (5)
	Statement -> TOKENSDIR TerminalList                (6)
	Statement -> GRAMMARDIR GrammarList                (7)
	TerminalList -> SLBRACE TerminalEnumeration SRBRACE   (8)
	TerminalEnumeration -> Terminal                    (9)
	TerminalEnumeration -> TerminalEnumeration COMMA Terminal   (10)
	Terminal -> IDENTIFIER                             (11)
	Terminal -> IDENTIFIER UNDERSCORE                  (12)
	GrammarList -> RuleDefinition                      (13)
	GrammarList -> GrammarList RuleDefinition          (14)
	RuleDefinition -> IDENTIFIER ARROW RuleAction RuleList   (15)
	RuleList -> RuleList DELIMITER RuleAction          (16)
	RuleList ->                                        (17)
	RuleAction -> CaseList CLBRACE ActionList CRBRACE   (18)
	CaseList -> CaseList IDENTIFIER                    (19)
	CaseList ->                                        (20)
	ActionList -> ActionList NameOrRef                 (21)
	ActionList ->                                      (22)
	NameOrRef -> IDENTIFIER                            (23)
	NameOrRef -> REF                                   (24)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	MODULEDIR      { ModuleDirectiveT }
	IMPORTDIR      { ImportDirectiveT }
	TOKENSDIR      { TokensDirectiveT }
	GRAMMARDIR     { GrammarDirectiveT }
	REF            { RefT $$ }
	IDENTIFIER     { IdentifierT $$ }
	UNDERSCORE     { UnderscoreT }
	CLBRACE        { CurlyLBraceT }
	CRBRACE        { CurlyRBraceT }
	SLBRACE        { SquareLBraceT }
	SRBRACE        { SquareRBraceT }
	ARROW          { ArrowT }
	DELIMITER      { DelimiterT }
	COMMA          { CommaT }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseSLRFile rule  0
	File            rule  1
	StatementList   rules 2, 3
	Statement       rules 4, 5, 6, 7
	TerminalList    rule  8
	TerminalEnumeration rules 9, 10
	Terminal        rules 11, 12
	GrammarList     rules 13, 14
	RuleDefinition  rule  15
	RuleList        rules 16, 17
	RuleAction      rule  18
	CaseList        rules 19, 20
	ActionList      rules 21, 22
	NameOrRef       rules 23, 24

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	MODULEDIR      shift, and enter state 4
	IMPORTDIR      shift, and enter state 5
	TOKENSDIR      shift, and enter state 6
	GRAMMARDIR     shift, and enter state 7

	File           goto state 8
	StatementList  goto state 2
	Statement      goto state 3

State 1


	MODULEDIR      shift, and enter state 4
	IMPORTDIR      shift, and enter state 5
	TOKENSDIR      shift, and enter state 6
	GRAMMARDIR     shift, and enter state 7

	StatementList  goto state 2
	Statement      goto state 3

State 2

	File -> StatementList .                             (rule 1)
	StatementList -> StatementList . Statement          (rule 3)

	MODULEDIR      shift, and enter state 4
	IMPORTDIR      shift, and enter state 5
	TOKENSDIR      shift, and enter state 6
	GRAMMARDIR     shift, and enter state 7
	%eof           reduce using rule 1

	Statement      goto state 16

State 3

	StatementList -> Statement .                        (rule 2)

	MODULEDIR      reduce using rule 2
	IMPORTDIR      reduce using rule 2
	TOKENSDIR      reduce using rule 2
	GRAMMARDIR     reduce using rule 2
	%eof           reduce using rule 2


State 4

	Statement -> MODULEDIR . IDENTIFIER                 (rule 4)

	IDENTIFIER     shift, and enter state 15


State 5

	Statement -> IMPORTDIR . IDENTIFIER                 (rule 5)

	IDENTIFIER     shift, and enter state 14


State 6

	Statement -> TOKENSDIR . TerminalList               (rule 6)

	SLBRACE        shift, and enter state 13

	TerminalList   goto state 12

State 7

	Statement -> GRAMMARDIR . GrammarList               (rule 7)

	IDENTIFIER     shift, and enter state 11

	GrammarList    goto state 9
	RuleDefinition goto state 10

State 8

	%start_parseSLRFile -> File .                       (rule 0)

	%eof           accept


State 9

	Statement -> GRAMMARDIR GrammarList .               (rule 7)
	GrammarList -> GrammarList . RuleDefinition         (rule 14)

	MODULEDIR      reduce using rule 7
	IMPORTDIR      reduce using rule 7
	TOKENSDIR      reduce using rule 7
	GRAMMARDIR     reduce using rule 7
	IDENTIFIER     shift, and enter state 11
	%eof           reduce using rule 7

	RuleDefinition goto state 21

State 10

	GrammarList -> RuleDefinition .                     (rule 13)

	MODULEDIR      reduce using rule 13
	IMPORTDIR      reduce using rule 13
	TOKENSDIR      reduce using rule 13
	GRAMMARDIR     reduce using rule 13
	IDENTIFIER     reduce using rule 13
	%eof           reduce using rule 13


State 11

	RuleDefinition -> IDENTIFIER . ARROW RuleAction RuleList    (rule 15)

	ARROW          shift, and enter state 20


State 12

	Statement -> TOKENSDIR TerminalList .               (rule 6)

	MODULEDIR      reduce using rule 6
	IMPORTDIR      reduce using rule 6
	TOKENSDIR      reduce using rule 6
	GRAMMARDIR     reduce using rule 6
	%eof           reduce using rule 6


State 13

	TerminalList -> SLBRACE . TerminalEnumeration SRBRACE    (rule 8)

	IDENTIFIER     shift, and enter state 19

	TerminalEnumerationgoto state 17
	Terminal       goto state 18

State 14

	Statement -> IMPORTDIR IDENTIFIER .                 (rule 5)

	MODULEDIR      reduce using rule 5
	IMPORTDIR      reduce using rule 5
	TOKENSDIR      reduce using rule 5
	GRAMMARDIR     reduce using rule 5
	%eof           reduce using rule 5


State 15

	Statement -> MODULEDIR IDENTIFIER .                 (rule 4)

	MODULEDIR      reduce using rule 4
	IMPORTDIR      reduce using rule 4
	TOKENSDIR      reduce using rule 4
	GRAMMARDIR     reduce using rule 4
	%eof           reduce using rule 4


State 16

	StatementList -> StatementList Statement .          (rule 3)

	MODULEDIR      reduce using rule 3
	IMPORTDIR      reduce using rule 3
	TOKENSDIR      reduce using rule 3
	GRAMMARDIR     reduce using rule 3
	%eof           reduce using rule 3


State 17

	TerminalList -> SLBRACE TerminalEnumeration . SRBRACE    (rule 8)
	TerminalEnumeration -> TerminalEnumeration . COMMA Terminal    (rule 10)

	SRBRACE        shift, and enter state 25
	COMMA          shift, and enter state 26


State 18

	TerminalEnumeration -> Terminal .                   (rule 9)

	SRBRACE        reduce using rule 9
	COMMA          reduce using rule 9


State 19

	Terminal -> IDENTIFIER .                            (rule 11)
	Terminal -> IDENTIFIER . UNDERSCORE                 (rule 12)

	UNDERSCORE     shift, and enter state 24
	SRBRACE        reduce using rule 11
	COMMA          reduce using rule 11


State 20

	RuleDefinition -> IDENTIFIER ARROW . RuleAction RuleList    (rule 15)

	IDENTIFIER     reduce using rule 20
	CLBRACE        reduce using rule 20

	RuleAction     goto state 22
	CaseList       goto state 23

State 21

	GrammarList -> GrammarList RuleDefinition .         (rule 14)

	MODULEDIR      reduce using rule 14
	IMPORTDIR      reduce using rule 14
	TOKENSDIR      reduce using rule 14
	GRAMMARDIR     reduce using rule 14
	IDENTIFIER     reduce using rule 14
	%eof           reduce using rule 14


State 22

	RuleDefinition -> IDENTIFIER ARROW RuleAction . RuleList    (rule 15)

	MODULEDIR      reduce using rule 17
	IMPORTDIR      reduce using rule 17
	TOKENSDIR      reduce using rule 17
	GRAMMARDIR     reduce using rule 17
	IDENTIFIER     reduce using rule 17
	DELIMITER      reduce using rule 17
	%eof           reduce using rule 17

	RuleList       goto state 30

State 23

	RuleAction -> CaseList . CLBRACE ActionList CRBRACE    (rule 18)
	CaseList -> CaseList . IDENTIFIER                   (rule 19)

	IDENTIFIER     shift, and enter state 28
	CLBRACE        shift, and enter state 29


State 24

	Terminal -> IDENTIFIER UNDERSCORE .                 (rule 12)

	SRBRACE        reduce using rule 12
	COMMA          reduce using rule 12


State 25

	TerminalList -> SLBRACE TerminalEnumeration SRBRACE .    (rule 8)

	MODULEDIR      reduce using rule 8
	IMPORTDIR      reduce using rule 8
	TOKENSDIR      reduce using rule 8
	GRAMMARDIR     reduce using rule 8
	%eof           reduce using rule 8


State 26

	TerminalEnumeration -> TerminalEnumeration COMMA . Terminal    (rule 10)

	IDENTIFIER     shift, and enter state 19

	Terminal       goto state 27

State 27

	TerminalEnumeration -> TerminalEnumeration COMMA Terminal .    (rule 10)

	SRBRACE        reduce using rule 10
	COMMA          reduce using rule 10


State 28

	CaseList -> CaseList IDENTIFIER .                   (rule 19)

	IDENTIFIER     reduce using rule 19
	CLBRACE        reduce using rule 19


State 29

	RuleAction -> CaseList CLBRACE . ActionList CRBRACE    (rule 18)

	REF            reduce using rule 22
	IDENTIFIER     reduce using rule 22
	CRBRACE        reduce using rule 22

	ActionList     goto state 32

State 30

	RuleDefinition -> IDENTIFIER ARROW RuleAction RuleList .    (rule 15)
	RuleList -> RuleList . DELIMITER RuleAction         (rule 16)

	MODULEDIR      reduce using rule 15
	IMPORTDIR      reduce using rule 15
	TOKENSDIR      reduce using rule 15
	GRAMMARDIR     reduce using rule 15
	IDENTIFIER     reduce using rule 15
	DELIMITER      shift, and enter state 31
	%eof           reduce using rule 15


State 31

	RuleList -> RuleList DELIMITER . RuleAction         (rule 16)

	IDENTIFIER     reduce using rule 20
	CLBRACE        reduce using rule 20

	RuleAction     goto state 37
	CaseList       goto state 23

State 32

	RuleAction -> CaseList CLBRACE ActionList . CRBRACE    (rule 18)
	ActionList -> ActionList . NameOrRef                (rule 21)

	REF            shift, and enter state 34
	IDENTIFIER     shift, and enter state 35
	CRBRACE        shift, and enter state 36

	NameOrRef      goto state 33

State 33

	ActionList -> ActionList NameOrRef .                (rule 21)

	REF            reduce using rule 21
	IDENTIFIER     reduce using rule 21
	CRBRACE        reduce using rule 21


State 34

	NameOrRef -> REF .                                  (rule 24)

	REF            reduce using rule 24
	IDENTIFIER     reduce using rule 24
	CRBRACE        reduce using rule 24


State 35

	NameOrRef -> IDENTIFIER .                           (rule 23)

	REF            reduce using rule 23
	IDENTIFIER     reduce using rule 23
	CRBRACE        reduce using rule 23


State 36

	RuleAction -> CaseList CLBRACE ActionList CRBRACE .    (rule 18)

	MODULEDIR      reduce using rule 18
	IMPORTDIR      reduce using rule 18
	TOKENSDIR      reduce using rule 18
	GRAMMARDIR     reduce using rule 18
	IDENTIFIER     reduce using rule 18
	DELIMITER      reduce using rule 18
	%eof           reduce using rule 18


State 37

	RuleList -> RuleList DELIMITER RuleAction .         (rule 16)

	MODULEDIR      reduce using rule 16
	IMPORTDIR      reduce using rule 16
	TOKENSDIR      reduce using rule 16
	GRAMMARDIR     reduce using rule 16
	IDENTIFIER     reduce using rule 16
	DELIMITER      reduce using rule 16
	%eof           reduce using rule 16


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 25
Number of terminals: 14
Number of non-terminals: 14
Number of states: 38
